mail fix user log
